<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgrd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >


        <TextView
            android:id="@+id/title"
            android:text="@string/title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:autoSizeTextType="uniform"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeMinTextSize="40dp"
            android:autoSizeMaxTextSize="150dp"
            android:layout_weight="1"
            style="@style/all_text"


            />

        <ImageView
            android:id="@+id/logoCat"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:hint="my cat"
            android:src="@drawable/cat_n"
             />



        <Button
            android:id="@+id/bGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/b1"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="15sp"
            android:backgroundTint="@color/txt"
            android:padding="16dp"
            android:text="@string/buttG"
            android:textColor="@color/butt"
            android:textSize="38dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/bGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bGallery"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="15sp"
            android:backgroundTint="@color/txt"
            android:padding="16dp"
            android:text="@string/bGame"
            android:textColor="@color/butt"
            android:textSize="38dp"
            tools:ignore="TextContrastCheck"
            android:textAllCaps="false"/>






    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <TextView
            style="@style/all_text"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/until"

            />

        <TextView
            android:textSize="24dp"
            android:id="@+id/howMany"
            style="@style/all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:textSize="24dp"
            style="@style/all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days" />
    </LinearLayout>






</FrameLayout>
